bug fixed of dark mode

--- a/style.css
+++ b/style.css
@@ -47,25 +47,65 @@ nav{
     color: #2A4DD0;
     text-decoration: underline;
 
-    text-decoration-thickness: 2px;
+    text-decoration-thickness: 3px;
     text-underline-offset: 5px;
 }
-
+.tabs a:hover{
+    color: black ;
+}
 #toggle-mode {
-    padding: 3px 5px;
+    position: relative;
+    padding: 5px;
     border: none;
-    background-color: #223344;
+    background-color: transparent;
     cursor: pointer;
-    border-radius: 20px;
 }
-#sun{
-    border-radius: 50%;
-    padding: 2px;
-    background-color: #F2F9FE;
+
+.switch {
+    position: relative;
+    width: 50px;
+    height: 25px;
+    background-color: #E0E0E0;
+    border-radius: 25px;
+    transition: background-color 0.5s ease;
 }
-#moon{
+
+.switch img {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: left 0.5s ease, right 0.5s ease, opacity 0.5s ease;
     border-radius: 50%;
-    padding: 2px;
+}
+
+#moon {
+    left: 25px;
+    opacity: 0;
+}
+
+#sun {
+    left: 5px; 
+    opacity: 1; 
+}
+
+body.dark-mode #toggle-mode .switch {
+    background-color: #333; 
+}
+
+body.dark-mode #toggle-mode .switch img {
+    transform: translateY(-50%) rotate(180deg);
+}
+
+body.dark-mode #toggle-mode #moon {
+    left: 5px;
+    opacity: 1;
+}
+
+body.dark-mode #toggle-mode #sun {
+    left: 25px;
+    opacity: 0; 
 }
 
 
@@ -109,7 +149,7 @@ main{
     padding: 15px 40px;
     font-family: 'Poppins';
     font-size: 1.125rem;
-    font-weight: 500;
+    font-weight: 600;
 }
 .buttons button:nth-child(1){
     color: #F2F9FE;
@@ -120,7 +160,7 @@ main{
 .buttons button:nth-child(2){
     color: #2A4DD0;
     text-decoration: underline;
-    text-decoration-thickness: 2px;
+    text-decoration-thickness: 3px;
     text-underline-offset: 5px;
 }
 .no-required{
@@ -154,15 +194,20 @@ main{
 
 
 .author-info {
+    position: fixed;
+    bottom: 5px;
+    left: 0;
+    width: 100%;
     font-size: 14px;
     text-align: center;
     margin-top: 16px;
-    color: rgb(55, 65, 81);
 }
 
 .author-info a {
+    color: #2A4DD0;
     text-decoration: none;
 }
+
 
 
 
@@ -174,19 +219,17 @@ body.dark-mode {
     background-color: #111729;
     color: #FFFFFF;  
 }
-body.darkmode .tabs a, .tabs .actual-page a {
-    color: #FFFFFF;  /* Asegurarnos de que los enlaces también sean visibles */
+body.dark-mode .tabs a{
+    color: #909193;
 }
-
-#toggle-mode.dark-mode {
-    background-color: #FFFFFF;
+body.dark-mode .tabs a:hover{
+    color: #fff;
 }
-
-#moon.dark-mode {
+body.dark-mode .tabs .actual-page a{
+    color: #FFFFFF;
+}
+body.dark-mode .first-sect .buttons button:nth-child(2){
     color: #FFFFFF;
 }
 
-#sun.dark-mode {
-    background-color: #121212;
-    color: #FFFFFF;
-}
+
